fix menu overflow

--- a/components/layout/MenuLeft/style.module.scss
+++ b/components/layout/MenuLeft/style.module.scss
@@ -46,7 +46,7 @@
     width: 270px;
     display: flex;
     flex-direction: column;
-    overflow: auto;
+    //overflow: visible;
   }
 
   // menu container
